--- a/src/app/list-media/list-media.component.html
+++ b/src/app/list-media/list-media.component.html
@@ -1,11 +1,11 @@
 <p>
-  {{tervehdys}}
+  {{ tervehdys }}
 </p>
 
 <ul>
   <li *ngFor="let media of kaikkiMedia">
-    <img [src]="mediaUrl + media.filename">
-    <h4>{{media.filename}}</h4>
-    <p>Description</p>
+    <img [src]="mediaUrl + media.thumbnail">
+    <h4>{{ media.title }}</h4>
+    <p>{{ media.description }}</p>
   </li>
 </ul>
